[NB][WIP] Add libs, three.js widget demo

--- a/index.html
+++ b/index.html
@@ -3,14 +3,30 @@
         <meta charset="utf-8">
     </head>
     <body>
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.0.0/codemirror.css" rel="stylesheet" type="text/css">
-      <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-      <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/codemirror.js"></script>
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/mode/javascript/javascript.min.js"></script>
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/mode/css/css.min.js"></script>
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/keymap/vim.min.js"></script>
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5.1/dat.gui.min.js"></script>
+      <link href="libs/codemirror/codemirror.css" rel="stylesheet" type="text/css">
+      <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+      <script type="text/javascript" src="libs/underscore-min.js"></script>
+      <script type="text/javascript" src="libs/backbone-min.js"></script>
+      <script type="text/javascript" src="libs/jquery.slim.min.js"></script>
+      <script type="text/javascript" src="libs/codemirror/codemirror.js"></script>
+      <script type="text/javascript" src="libs/codemirror/mode/javascript/javascript.min.js"></script>
+      <script type="text/javascript" src="libs/codemirror/mode/css/css.min.js"></script>
+      <script type="text/javascript" src="libs/codemirror/keymap/vim.min.js"></script>
+
+      <script type="text/javascript" src="libs/dat.gui.min.js"></script>
+      <script type="text/javascript" src="libs/three.min.js" charset="utf-8"></script>
+      <script type="text/javascript" src="libs/OrbitControls.js" charset="utf-8"></script>
+      <script type="text/javascript" src="libs/numeric.min.js"></script>
+      <!--<script type="text/javascript" src="libs/d3.controlPoints.js"></script>-->
+      <script type="text/javascript" src="libs/perspective-transform.js"></script>
+      <script type="text/javascript" src="libs/stats.js"></script>
+      <script type="text/javascript" src="libs/two.min.js"></script>
+      <script type="text/javascript" src="libs/socket.io.min.js"></script>
+      <!--<script type="text/javascript" src="libs/pandas-helpers.js"></script>-->
+      <script type="text/javascript" src="libs/zmq-plugin.js"></script>
+      <script type="text/javascript" src="libs/ThreeHelpers.MouseEventHandler.js"></script>
+      <script type="text/javascript" src="libs/ThreeHelpers.SvgPathsGroup.js"></script>
+
       <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
     </body>
 </html>
