Added schemaGrid, multiple videos

--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
     <body>
       <link href="libs/codemirror/codemirror.css" rel="stylesheet" type="text/css">
       <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+      <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/themes/dark-hive/jquery-ui.css" rel="stylesheet" media="screen" type="text/css">
+      <link rel="stylesheet" href="libs/ui.jqgrid.css" type="text/css">
+
+
       <script type="text/javascript" src="libs/underscore-min.js"></script>
       <script type="text/javascript" src="libs/backbone-min.js"></script>
-      <script type="text/javascript" src="libs/jquery.slim.min.js"></script>
+      <!--<script type="text/javascript" src="libs/jquery.slim.min.js"></script>-->
+      <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       <script type="text/javascript" src="libs/codemirror/codemirror.js"></script>
       <script type="text/javascript" src="libs/codemirror/mode/javascript/javascript.min.js"></script>
       <script type="text/javascript" src="libs/codemirror/mode/css/css.min.js"></script>
       <script type="text/javascript" src="libs/codemirror/keymap/vim.min.js"></script>
-
+      
       <script type="text/javascript" src="libs/dat.gui.min.js"></script>
       <script type="text/javascript" src="libs/three.min.js" charset="utf-8"></script>
       <script type="text/javascript" src="libs/OrbitControls.js" charset="utf-8"></script>
       <script type="text/javascript" src="libs/numeric.min.js"></script>
-      <!--<script type="text/javascript" src="libs/d3.controlPoints.js"></script>-->
+      <script type="text/javascript" src="libs/d3.controlPoints.js"></script>
       <script type="text/javascript" src="libs/perspective-transform.js"></script>
       <script type="text/javascript" src="libs/stats.js"></script>
       <script type="text/javascript" src="libs/two.min.js"></script>
@@ -27,6 +32,12 @@
       <script type="text/javascript" src="libs/ThreeHelpers.MouseEventHandler.js"></script>
       <script type="text/javascript" src="libs/ThreeHelpers.SvgPathsGroup.js"></script>
 
+      <!--for the grid-->
+      <script type="text/javascript" src=http://www.trirand.net/aspnetmvc/Scripts/trirand/i18n/grid.locale-en.js></script>
+      <script type="text/javascript" src=http://www.trirand.net/aspnetmvc/Scripts/trirand/jquery.jqGrid.min.js></script>
+      <script type="text/javascript" src=http://cdnjs.cloudflare.com/ajax/libs/ajv/4.1.2/ajv.min.js></script>
+      <script type="text/javascript" src="libs/schemaGrid.js"></script>
+      
       <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
     </body>
 </html>
